Modify eslint config and github action config to fix linebreak error

--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -37,7 +37,7 @@ jobs:
         run: npm install
 
       - name: Build
-        run: npm run build:dev
+        run: IS_GITHUB_ACTION="true" npm run build:dev
       
       - name: Copy build to app
         run: |
