Add CI env as false to pass eslint

--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -16,6 +16,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env: 
+      CI: false
     steps:
       - name: Checkout source code
         uses: actions/checkout@v1
