--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -47,7 +47,7 @@ jobs:
           cp -r build/ app/
 
       - name: Generate deployment package
-        run: zip -r deploy-web.zip ./app ./.ebextensions
+        run: zip -r deploy-web.zip . -x '*.git*' -x build/
 
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v14
