--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Copy build to app
         run: |
           mkdir app
-          cp -r build/ app/
+          cp -r build/* app/
 
       - name: Generate deployment package
         run: zip -r deploy-web.zip . -x *.git* node_modules/\*
