Fix: remove config and script to remove default eb nginx config and modify log format name

--- a/.platform/nginx/conf.d/proxy.config
+++ b/.platform/nginx/conf.d/proxy.config
@@ -12,8 +12,8 @@ server {
       set $day $3;
       set $hour $4;
   }
-  access_log /var/log/nginx/healthd/application.log.$year-$month-$day-$hour healthd;
-  access_log  /var/log/nginx/access.log  main;
+  access_log /var/log/nginx/healthd/application.log.$year-$month-$day-$hour healthd_nginx;
+  access_log  /var/log/nginx/access.log  main_nginx;
 
   location / {
       proxy_pass  http://nodejs;
