--- a/.ebextensions/chmod.config
+++ b/.ebextensions/chmod.config
@@ -1,3 +1,3 @@
 commands:
   01_chmod: 
-    command: "chmod +x .platform/hooks/prebuild/50npm.sh .platform/confighooks/prebuild/50npm.sh"
+    command: "chmod -R +x .platform/hooks/prebuild"
