Fix: comment contents for prebuild and predeploy and modify port for web and add script to install serve

--- a/.platform/nginx/conf.d/proxy.conf
+++ b/.platform/nginx/conf.d/proxy.conf
@@ -1,5 +1,5 @@
 upstream nodejs {
-  server localhost:3000;
+  server localhost:5000;
   keepalive 256;
 }
 
@@ -34,16 +34,16 @@ server {
   gzip_types text/html text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss application/rss+xml text/js text/javascript application/javascript image/svg+xml;
 
   location /static {
-      alias /var/app/current/app/static;
+      alias /var/app/current/build/static;
   }
 }
 
 server {
-  listen 3000;
+  listen 5000;
   server_name localhost;
 
   location / {
-      root /var/app/current/app;
+      root /var/app/current/build;
       index index.html index.htm;
       try_files $uri $uri/ /index.html;
   }
