--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -33,19 +33,19 @@ jobs:
         with:
           node-version: '12.18.3'
 
-      - name: Install packages
-        run: npm install
+      # - name: Install packages
+      #   run: npm install
 
-      - name: Build
-        run: npm run build:dev
+      # - name: Build
+      #   run: npm run build:dev
       
-      - name: Copy build to app
-        run: |
-          mkdir app
-          cp -r build/* app/
+      # - name: Copy build to app
+      #   run: |
+      #     mkdir app
+      #     cp -r build/* app/
 
       - name: Generate deployment package
-        run: zip -r deploy-web.zip . -x *.git* node_modules/\* build/\*
+        run: zip -r deploy-web.zip . -x *.git* node_modules/\*
 
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v14
