Fix: uncomment for prebuild and predeploy and restore install and build stage

--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -33,11 +33,11 @@ jobs:
         with:
           node-version: '12.18.3'
 
-      # - name: Install packages
-      #   run: npm install
+      - name: Install packages
+        run: npm install
 
-      # - name: Build
-      #   run: npm run build:dev
+      - name: Build
+        run: npm run build:dev
       
       # - name: Copy build to app
       #   run: |
