--- a/.platform/nginx/conf.d/proxy.conf
+++ b/.platform/nginx/conf.d/proxy.conf
@@ -24,6 +24,14 @@ server {
       proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
   }
 
+  location /vi {
+      proxy_pass  https://img.youtube.com;
+  }
+
+  location /media/cover_image {
+      proxy_pass  https://star-light.s3.ap-northeast-2.amazonaws.com;
+  }
+
   gzip on;
   gzip_disable "msie6";
 
