--- a/.platform/nginx/conf.d/proxy.conf
+++ b/.platform/nginx/conf.d/proxy.conf
@@ -18,7 +18,6 @@ server {
   location / {
       proxy_pass  http://nodejs;
       proxy_set_header   Connection "";
-      proxy_http_version 1.1;
       proxy_set_header        Host            $host;
       proxy_set_header        X-Real-IP       $remote_addr;
       proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -27,19 +26,19 @@ server {
   location /vi {
       proxy_pass  https://img.youtube.com;
       proxy_set_header   Connection "";
-      proxy_http_version 1.1;
       proxy_set_header        Host            $host;
       proxy_set_header        X-Real-IP       $remote_addr;
       proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Access-Control-Allow-Origin *;
   }
 
   location /media/cover_image {
       proxy_pass  https://star-light.s3.ap-northeast-2.amazonaws.com;
       proxy_set_header   Connection "";
-      proxy_http_version 1.1;
       proxy_set_header        Host            $host;
       proxy_set_header        X-Real-IP       $remote_addr;
       proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Access-Control-Allow-Origin *;
   }
 
   gzip on;
