--- a/.platform/nginx/conf.d/proxy.conf
+++ b/.platform/nginx/conf.d/proxy.conf
@@ -29,7 +29,7 @@ server {
       proxy_set_header        Host            $host;
       proxy_set_header        X-Real-IP       $remote_addr;
       proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header Access-Control-Allow-Origin *;
+      add_header Access-Control-Allow-Origin *;
   }
 
   location /media/cover_image {
@@ -38,7 +38,7 @@ server {
       proxy_set_header        Host            $host;
       proxy_set_header        X-Real-IP       $remote_addr;
       proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header Access-Control-Allow-Origin *;
+      add_header Access-Control-Allow-Origin *;
   }
 
   gzip on;
