--- a/.platform/nginx/conf.d/proxy.conf
+++ b/.platform/nginx/conf.d/proxy.conf
@@ -21,8 +21,7 @@ server {
       proxy_set_header        Host            $host;
       proxy_set_header        X-Real-IP       $remote_addr;
       proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-      add_header Origin http://$host;
-      proxy_set_header Origin http://$host;
+      add_header Access-Control-Allow-Origin http://$host;
   }
 
   location /vi {
@@ -31,7 +30,7 @@ server {
       proxy_set_header        Host            $host;
       proxy_set_header        X-Real-IP       $remote_addr;
       proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header Access-Control-Allow-Origin https://img.youtube.com;
+      add_header Access-Control-Allow-Origin https://img.youtube.com;
   }
 
   location /media/cover_image {
@@ -40,7 +39,7 @@ server {
       proxy_set_header        Host            $host;
       proxy_set_header        X-Real-IP       $remote_addr;
       proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header Access-Control-Allow-Origin https://star-light.s3.ap-northeast-2.amazonaws.com;
+      add_header Access-Control-Allow-Origin https://star-light.s3.ap-northeast-2.amazonaws.com;
   }
 
   gzip on;
